--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -236,12 +236,12 @@
 <body>
     <div style="display: none;" class="containerIframe" id ="containerIframe">
     <button class="buttonIframeClose" onclick="closeIFrame(this);">X</button><br>
-    <iframe id="iframePerfil" src="/" width="100%" height="100%"></iframe>
+    <iframe id="iframePerfil" src="/errorPage" width="100%" height="100%"></iframe>
     </div>
 
     <div style="display:none;" class="containerIframe" id ="containerIframeComponentes">
         <button class="buttonIframeClose" onclick="closeIFrame(this);">X</button><br>
-        <iframe id="iframeComponentesOP" src="/" width="100%" height="100%"></iframe>
+        <iframe id="iframeComponentesOP" src="/errorPage" width="100%" height="100%"></iframe>
         </div>
 
     <div id="loadingOverlay" class="loading-overlay">
@@ -249,12 +249,12 @@
     </div>
     <div style="display: none;" class="containerIframeOP" id ="containerIframeOP">
         <button class="buttonIframeClose" onclick="closeIFrame(this);">X</button><br>
-        <iframe id="iframeOP" src="/" width="100%" height="100%"></iframe>
+        <iframe id="iframeOP" src="/errorPage" width="100%" height="100%"></iframe>
     </div>
 
     <div style="display: none;" class="containerIframeChecklist" id ="containerIframeChecklist">
         <button class="buttonIframeClose" onclick="closeIFrame(this);">X</button><br>
-        <iframe id="iframeChecklist" src="/" width="100%" height="95%"></iframe>
+        <iframe id="iframeChecklist" src="/errorPage" width="100%" height="95%"></iframe>
     </div>
 
     <div style="display: none;" class="containerIframeError" id ="containerIframeError">
@@ -442,6 +442,8 @@
             }
             function closeIFrame(element) {
                 var frame = element.parentElement;
+                let iframeSRC = frame.querySelector('iframe');
+                iframeSRC.src = '/errorPage';
                 frame.style.display = "none";
             }
         </script>
