Adicionado manifest para a fila

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -285,7 +285,7 @@ body {
 <meta name="theme-color" content="#000000">
 
 <!-- Link para o arquivo manifest.json -->
-<link rel="manifest" href="/files/manifestExtrusao.json">
+<link rel="manifest" href="/files/manifestFilaExtrusao.json.json">
 
 <!-- Tags para iOS (Safari) -->
 <meta name="apple-mobile-web-app-capable" content="yes">
